syntax = "proto3";

option go_package = "./";

package notice;

// Interface exported by the server.
service ServiceNotice {
  rpc Req(Request) returns (Response) {}	
  rpc ReqSub(Request) returns (Response) {}	
  rpc Health(stream ServerHealth) returns (stream ServerHealth) {}
}
enum STATUS{
  STATUS_CLOSE = 0;
  STATUS_READY = 1;
  STATUS_BUSY = 2;
}

message Request{
  string uri = 1;
  repeated Param params = 2;
}

message Response{
  string uri = 1;
  repeated Param params = 2;
  string body = 3;
  int32 status_code = 4;
}

message Param {
  string key = 1;
  string value = 2;
}

message ServerHealth {
  STATUS status = 1;
  int64 currentMillis = 2;
}


